# AIBI

./: .env  .gitignore  README.md  agent.py  aibi_storage.db  api.py  app.py  knowledge.JSON  prompt.md  pyproject.toml  requirements.txt
tmp/lancedb/conhecimento_bi.lance/_transactions/: 0-0788f12b-0b52-40c6-b3b9-e8300d03d48d.txn
