[project]
name = "aibi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.14",
    "fastapi>=0.135.3",
    "groq>=1.1.2",
    "plotly>=6.6.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]
